--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <body id="wrapper">
         <header>
         <h1>
-            <img src="name1.PNG" height="100" width="500">
+            <img src="name-removebg-preview.png" height="100" width="500">
         </h1>
         </header>
         <nav id="floatcenter">
             <ul>
-                <li><a href="index.html"><img src="house-removebg-preview.PNG" height="100" width="150">Home</a></li>
-                <li><a href="bio.html" ><img src="biopic-removebg-preview.PNG" height="100" width="150" id="floatleft">Bio</a></li>
-                <li><a href="furture.html" ><img src="furture-removebg-preview.PNG" height="100" width="150" id="floatleft">Future</a></li>
+                <li></li>
+                <li><a href="index.html"><img src="abetterhouse-removebg-preview.png" height="100" width="150">Home</a></li>
+                <li><a href="projects.html" ><img src="projectsbutton-removebg-preview.png" height="100" width="150" id="floatleft">Projects</a></li>
+                <li><a href="aboutme.html" ><img src="futurebuttonlogo-removebg-preview.PNG" height="100" width="150" id="floatleft">Future</a></li>
             </ul>
         </nav>
         <main>
