--- a/aboutme.html
+++ b/aboutme.html
@@ -21,16 +21,11 @@
             </ul>
         </nav>
         <main>
-        <div class="row py-5">
-            <div class="col-md-3">
-                <i class="fas fa-grimace"></i>
-                <h3> GIT HUB</h3>
-            </div>
-        </div>
+            <img src="sictic.jpg" height="300" width="400">
+            <img src="github.jpg" height="200" width="400">
         </main>
-
         <footer>
-             FOOTER<br>
+            COPYRIGHT &copy; Parker Matthews<br>
             <a href = "mailto:parker.matthews@evsck12.com">Email Me</a>
         </footer>
         
