--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                 <dd>I am 17 years old , and have many hobbies outside of coding. I enjoy playing sports and enjoying outside. But I cant forget I love most of all playing some video games. </dd>
         </dl>
         </main>
-
         <footer>
-             FOOTER<br>
+            COPYRIGHT &copy; Parker Matthews<br>
             <a href = "mailto:parker.matthews@evsck12.com">Email Me</a>
         </footer>
         
