--- a/projects.html
+++ b/projects.html
@@ -21,40 +21,52 @@
             </ul>
         </nav>
         <main>
+          <div class="center-table">
             <table class="table table-dark">
                 <thead class="thead-dark">
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Language</th>
+                    <th scope="col">Project Name</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td>02/20/22</td>
+                    <td>Python</td>
+                    <td>Textbased Boardgame (Top Left)</td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
+                    <td>2/10/22</td>
+                    <td>HTML</td>
+                    <td>JavaJam (Top Right)</td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
+                    <td>01/25/23</td>
+                    <td>Python Turtle</td>
+                    <td>MazeRunner (Bottom Left)</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>02/22/23</td>
+                    <td>JavaScript</td>
+                    <td>Emoji Slots (Bottom Right)</td>
                   </tr>
                 </tbody>
               </table>
+            </div>
+            <img src="textbasedboardgame.jpg" height="300" width="400" >
+            <img src="javajam.jpg" height="300" width="400">
+            <img src="mazerunner.jpg" height="300" width="400">
+            <img src="slotsmachine.jpg" height="300" width="400">
         </main>
 
         <footer>
-             FOOTER<br>
+             COPYRIGHT &copy; Parker Matthews<br>
             <a href = "mailto:parker.matthews@evsck12.com">Email Me</a>
         </footer>
         
