--- a/aboutme.html
+++ b/aboutme.html
@@ -21,8 +21,29 @@
             </ul>
         </nav>
         <main>
-            <img src="sictic.jpg" height="300" width="400">
-            <img src="github.jpg" height="200" width="400">
+            <div class="floatleft">
+            <h3>Southern Indiana Career & Technical Center</h3>
+            <p>I attend the CS program at the Career Center , and code in lanuages such as HTML, Python , CSS , JavaScript and Scratch.</p>
+            <h3>GitHub Finshed Projects</h3>
+            <p>This GitHub repository has some of my finshed projects throughout the year at SICTIC.</p>
+            </div>
+            <div class="floatright">
+            <a href = "https://sictc.evscschools.com/"><img src="sictic.jpg" height="200" width="400"></a>
+            <a href = "https://github.com/ParkerMatthews/FinishedProjects"><img src="github.jpg" height="200" width="400"></a>
+            </div>
+            <div class="floatbottom">
+            <h2>Contact Me:</h2>
+            <p>Required fields are marked with an asterisk (*).</p>
+            <form method="post" action="http://parkermattgews.net/formhandle.php">
+                            <label for="myName">*Name:</label>
+                            <dd><input type="text" id="myName" name="myName"></dd>
+                            <label for="myEmail">*E-mail:</label>
+                            <input type="text" type="email" id="myEmail" name="myEmail">
+                            <label for="myReason">*Reason:</label>
+                            <textarea id="myReason" name="myReason" cols="20" rows="2"></textarea>
+                            <input type="submit" value="Apply Now" id="mySubmit" style="margin-bottom: 50px;margin-top: 20px;">
+            </form>
+        </div>
         </main>
         <footer>
             COPYRIGHT &copy; Parker Matthews<br>
