--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <main>
         <dl>
             <dt>About Me:</dt>
-                <dd>I am 17 years old , and have many hobbies outside of coding. I enjoy playing sports and enjoying outside. But I cant forget I love most of all playing some video games. </dd>
+                <dd>My name is Parker Matthews , as stated in the logo above. I'm orgianlly from Columbus Ohio , but moved to southerna indiana during my elementary years. I went to Lynnville Elementary until 6th grade then attended Tecumseh Jr/Sr High School. As some of my personal life I own my own LLC in the state of indiana as a sole proprietor. As of school after Southern Indiana Career & Technical Center I plan to attend University of Soutern Indiana for either CIS or CS for 4 or more years. After that I plan to move out of the Southern Indiana area and move west but not sure yet. Thanks for taking a read. </dd>
         </dl>
         </main>
         <footer>
