--- a/projects.html
+++ b/projects.html
@@ -46,23 +46,16 @@
                   </tr>
                   <tr>
                     <th scope="row">3</th>
-                    <td>01/25/23</td>
-                    <td>Python Turtle</td>
-                    <td>MazeRunner (Bottom Left)</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">4</th>
                     <td>02/22/23</td>
                     <td>JavaScript</td>
-                    <td>Emoji Slots (Bottom Right)</td>
+                    <td>Emoji Slots (Very Bottom ) Also Playable</td>
                   </tr>
                 </tbody>
               </table>
             </div>
-            <img src="textbasedboardgame.jpg" height="300" width="400" >
-            <img src="javajam.jpg" height="300" width="400">
-            <img src="mazerunner.jpg" height="300" width="400">
-            <img src="slotsmachine.jpg" height="300" width="400">
+            <img src="textbasedboardgame.jpg" height="300" width="520" >
+            <img src="javajam.jpg" height="300" width="500">
+            <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://2023emojisslots.parkermatthews1.repl.co/" width="300" height="400" frameborder="0" style="position:absolute;width:100%;height:100%;left:0;margin-bottom: 200px;" allowfullscreen></iframe></div>
         </main>
 
         <footer>
