--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <li><a href="aboutme.html" ><img src="futurebuttonlogo-removebg-preview.PNG" height="100" width="150" id="floatleft">Future</a></li>
             </ul>
         </nav>
+        <h3>Tecumseh High School (Left) & USI (Right)</h3>
+        <img src="tecumseh.jpg" height="200" width="500">
+        <img src="usi.jpg" height="200" width="500">
         <main>
         <dl>
             <dt>About Me:</dt>
